--- a/workflow_correct.ipynb
+++ b/workflow_correct.ipynb
@@ -4,33 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Cosmic-ray Neutron Calibration Package\n",
+    "# Example 1\n",
     "\n",
-    "A series of python routines to help researchers and practicioners convert cosmic-ray neutron observations into volumetric water content. The package includes a routine for calibration of detectors using field observations. The package offers the following capabilities:\n",
+    "Example using a dataset collected by a single trifluoride boron detector manufactured by Hydroinnova, LLC.\n",
     "\n",
-    "- Load data from different detectors\n",
-    "- Fill incomplete counts and flag spurious data\n",
-    "- Correct raw neutron counts \n",
-    "- Filter corrected neutron counts\n",
-    "- Convert corrected and filtered neutron counts into volumetric water content\n",
-    "- Compute sensing depth\n",
-    "- Estiamte soil water storage using sensing depth and a user-defined fixed soil depth\n",
-    "- Calibrate a cosmic-ray neutron detector using depth weighed field observations\n",
+    "Goal: Demonstrate the use of `CRNPy` to convert raw sensor data into surface soil water storage following common steps in the scientific literature.\n",
     "\n",
-    "Function documentation follows PEP 257 docstring conventions.\n",
-    "\n",
-    "\n",
-    "**User-defined variables**\n",
-    "\n",
-    "`Pref`: Reference barometric pressure in mbars\n",
-    "\n",
-    "`L`: Atmospheric attenuation coefficient in mbar^-1 (see Dong et al. 2014 p.4)\n",
-    "\n",
-    "`Aref`: Reference absolute air humidity in g/m^3\n",
-    "\n",
-    "**Correction variables**\n",
-    "\n",
-    "**Calibration variables**"
+    "Author: Andres Patrignani"
    ]
   },
   {
@@ -352,7 +332,7 @@
     }
    ],
    "source": [
-    "import pycrns\n",
+    "import crnpy\n",
     "import pandas as pd\n",
     "from bokeh.plotting import figure, show, output_notebook\n",
     "output_notebook()\n"
