--- a/examples/example_RDT_station.ipynb
+++ b/examples/example_RDT_station.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2b2604c0-cb6b-4c45-803f-c3c23f0f6631",
+   "id": "fc229b97",
    "metadata": {},
    "source": [
     "### CRNPy example using Radiation Detection Technologies, Inc neutron detectors readings"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "58b8596e-2a3e-437f-be26-af4420dac78a",
+   "id": "9ae7e6f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "62bc1aa4-c3cb-4cc5-b546-db2b18022d0d",
+   "id": "454f0ce2",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b0733dc3-5e7f-4b1f-a690-08a537fe6970",
+   "id": "07c0d330",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b2c85001-2bb6-4f12-aa43-81f33f5acb89",
+   "id": "65cb2622",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7d06edbb-26a7-4714-955c-9984b703d1e1",
+   "id": "a6c514a3",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e57279f6-8949-41fb-b882-28a1a42df335",
+   "id": "5b49c061",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fb7f8e86-dbb9-4612-a16e-daaad444fd85",
+   "id": "884ca76a",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "33d2bf5f-ecd5-4b09-8e0f-f90a0429dd39",
+   "id": "cb4d2d59",
    "metadata": {},
    "outputs": [
     {
@@ -425,8 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0c627238-5262-4b8a-9130-55ae5a7ac01d",
+   "execution_count": 1,
+   "id": "f9318ff1",
    "metadata": {},
    "outputs": [
     {
@@ -439,14 +439,10 @@
       "Building wheels for collected packages: crnpy\n",
       "  Building wheel for crnpy (setup.py): started\n",
       "  Building wheel for crnpy (setup.py): finished with status 'done'\n",
-      "  Created wheel for crnpy: filename=crnpy-0.2.post21-py3-none-any.whl size=17034 sha256=9c59441c7d5055eb89656aa80f2534b6ab0f3e0c90916c550a8782fb8dc21b49\n",
-      "  Stored in directory: C:\\Users\\jperaza\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-vqw0pztb\\wheels\\3f\\45\\f0\\d8811674c3e13ae702f8967370c355195f99b05b37f4869691\n",
+      "  Created wheel for crnpy: filename=crnpy-0.2.post21-py3-none-any.whl size=17030 sha256=317870aa3df96df1877d83abb38a0003cab3bcdacfa302b9493b8a65a8585074\n",
+      "  Stored in directory: C:\\Users\\jperaza\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-8gabu2py\\wheels\\d8\\04\\95\\b868552af5a02038c74b7d525df4e271ffe1b5454347a1cc19\n",
       "Successfully built crnpy\n",
       "Installing collected packages: crnpy\n",
-      "  Attempting uninstall: crnpy\n",
-      "    Found existing installation: crnpy 0.2.post21\n",
-      "    Uninstalling crnpy-0.2.post21:\n",
-      "      Successfully uninstalled crnpy-0.2.post21\n",
       "Successfully installed crnpy-0.2.post21\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -459,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a362243-7fbe-4704-8784-d4a82d60ee56",
+   "id": "0c23f4bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -467,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c1578fc-e71f-4681-9291-a2e72f26da02",
+   "id": "21f2746b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -489,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
