pandas warnings fixes

--- a/examples/example_RDT_station.ipynb
+++ b/examples/example_RDT_station.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fc229b97",
+   "id": "2605705e",
    "metadata": {},
    "source": [
     "### CRNPy example using Radiation Detection Technologies, Inc neutron detectors readings"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9ae7e6f3",
+   "id": "c403aa44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "454f0ce2",
+   "id": "7e712466",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "07c0d330",
+   "id": "663b0e56",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "65cb2622",
+   "id": "3c37709e",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a6c514a3",
+   "id": "fd813252",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5b49c061",
+   "id": "324d8c27",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "884ca76a",
+   "id": "48d294ab",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cb4d2d59",
+   "id": "fb78b1f5",
    "metadata": {},
    "outputs": [
     {
@@ -425,8 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f9318ff1",
+   "execution_count": 3,
+   "id": "f5a07668",
    "metadata": {},
    "outputs": [
     {
@@ -439,10 +439,14 @@
       "Building wheels for collected packages: crnpy\n",
       "  Building wheel for crnpy (setup.py): started\n",
       "  Building wheel for crnpy (setup.py): finished with status 'done'\n",
-      "  Created wheel for crnpy: filename=crnpy-0.2.post21-py3-none-any.whl size=17030 sha256=317870aa3df96df1877d83abb38a0003cab3bcdacfa302b9493b8a65a8585074\n",
-      "  Stored in directory: C:\\Users\\jperaza\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-8gabu2py\\wheels\\d8\\04\\95\\b868552af5a02038c74b7d525df4e271ffe1b5454347a1cc19\n",
+      "  Created wheel for crnpy: filename=crnpy-0.2.post21-py3-none-any.whl size=17038 sha256=abe857acc11142a87614252091cd51facb09159ddddb8d6fafb004dd31658fda\n",
+      "  Stored in directory: C:\\Users\\jperaza\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-l03_8ats\\wheels\\d8\\04\\95\\b868552af5a02038c74b7d525df4e271ffe1b5454347a1cc19\n",
       "Successfully built crnpy\n",
       "Installing collected packages: crnpy\n",
+      "  Attempting uninstall: crnpy\n",
+      "    Found existing installation: crnpy 0.2.post21\n",
+      "    Uninstalling crnpy-0.2.post21:\n",
+      "      Successfully uninstalled crnpy-0.2.post21\n",
       "Successfully installed crnpy-0.2.post21\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -455,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c23f4bf",
+   "id": "4fe3aa4e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -463,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21f2746b",
+   "id": "15b85406",
    "metadata": {},
    "outputs": [],
    "source": []
