--- a/examples/example_RDT_station.ipynb
+++ b/examples/example_RDT_station.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "abfd683a",
+   "id": "0b9a314b",
    "metadata": {},
    "source": [
     "### CRNPy example using Radiation Detection Technologies, Inc neutron detectors readings"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3103427f",
+   "id": "16f1fc51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a58797d2",
+   "id": "c58b59c7",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fe26e170",
+   "id": "24bfe358",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2704fdb6",
+   "id": "eee04bbd",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d0ae64ca",
+   "id": "ee1eaaf8",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cf0c7bc5",
+   "id": "149a238a",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "14405d56",
+   "id": "cca9ac59",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "75cf7b9d",
+   "id": "f896e539",
    "metadata": {},
    "outputs": [
     {
@@ -425,10 +425,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "50e37e7e",
+   "execution_count": 1,
+   "id": "9c801067",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing c:\\users\\jperaza\\documents\\github\\crnpy\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Building wheels for collected packages: crnpy\n",
+      "  Building wheel for crnpy (setup.py): started\n",
+      "  Building wheel for crnpy (setup.py): finished with status 'done'\n",
+      "  Created wheel for crnpy: filename=crnpy-0.2.post27-py3-none-any.whl size=17540 sha256=8d215320cf6d47febfa5e347fa175b45b3206ce08680ca739d46e3e47e1ddeb7\n",
+      "  Stored in directory: C:\\Users\\jperaza\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-cvybzqqw\\wheels\\d8\\04\\95\\b868552af5a02038c74b7d525df4e271ffe1b5454347a1cc19\n",
+      "Successfully built crnpy\n",
+      "Installing collected packages: crnpy\n",
+      "  Attempting uninstall: crnpy\n",
+      "    Found existing installation: crnpy 0.2.post27\n",
+      "    Uninstalling crnpy-0.2.post27:\n",
+      "      Successfully uninstalled crnpy-0.2.post27\n",
+      "Successfully installed crnpy-0.2.post27\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install ../"
    ]
@@ -436,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d479c35",
+   "id": "0d70b2af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -444,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13611125",
+   "id": "74047f5a",
    "metadata": {},
    "outputs": [],
    "source": []
