--- a/examples/example_Hydroinnova_rover.ipynb
+++ b/examples/example_Hydroinnova_rover.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8e6e5152",
+   "id": "a4695d9c",
    "metadata": {},
    "source": [
     "### CRNPy example using Hydroinnova, Inc neutron detector rover readings"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "61dcd466",
+   "id": "db588a76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "35bbc6da",
+   "id": "3de01382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6165c6e5",
+   "id": "776fa2f0",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "94684642",
+   "id": "cabb57d7",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0273b504",
+   "id": "ed2e02b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "71c4bc5f",
+   "id": "f42871ce",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c3a4b6bb",
+   "id": "7dce90ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "12215173",
+   "id": "1f7c8c18",
    "metadata": {},
    "outputs": [
     {
@@ -208,8 +208,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "08bba2f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GIS_env\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "40eddaaa",
+   "id": "2e9ea65d",
    "metadata": {},
    "outputs": [],
    "source": []
