--- a/examples/example_RDT_station.ipynb
+++ b/examples/example_RDT_station.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4dcbe0a4",
+   "id": "eddf1ad2",
    "metadata": {},
    "source": [
     "### CRNPy example using Radiation Detection Technologies, Inc neutron detectors readings"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d992e4db",
+   "id": "8ce956d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aaf714a1",
+   "id": "a18714dd",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8cff871e",
+   "id": "612a03cc",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "15062d23",
+   "id": "4f88a547",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3e6d09c5",
+   "id": "cdfe2331",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "41b4724a",
+   "id": "26db5ece",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "082053d6",
+   "id": "8b952f48",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "96d9a4da",
+   "id": "4141ce70",
    "metadata": {},
    "outputs": [
     {
@@ -425,33 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "199fd273",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing c:\\users\\jperaza\\documents\\github\\crnpy\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Building wheels for collected packages: crnpy\n",
-      "  Building wheel for crnpy (setup.py): started\n",
-      "  Building wheel for crnpy (setup.py): finished with status 'done'\n",
-      "  Created wheel for crnpy: filename=crnpy-0.2.post27-py3-none-any.whl size=17691 sha256=408a2fa8f74ec2362aae07d84996e3d4cb125ad145809a7a5ab611626f7f8b9a\n",
-      "  Stored in directory: C:\\Users\\jperaza\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-o876vsge\\wheels\\d8\\04\\95\\b868552af5a02038c74b7d525df4e271ffe1b5454347a1cc19\n",
-      "Successfully built crnpy\n",
-      "Installing collected packages: crnpy\n",
-      "  Attempting uninstall: crnpy\n",
-      "    Found existing installation: crnpy 0.2.post27\n",
-      "    Uninstalling crnpy-0.2.post27:\n",
-      "      Successfully uninstalled crnpy-0.2.post27\n",
-      "Successfully installed crnpy-0.2.post27\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
+   "execution_count": null,
+   "id": "ee5e949f",
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "pip install ../"
    ]
@@ -459,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d0c23ed",
+   "id": "b5bbb26d",
    "metadata": {},
    "outputs": [],
    "source": []
