--- a/examples_(ToDo_remove)/example_outliers.ipynb
+++ b/examples_(ToDo_remove)/example_outliers.ipynb
@@ -132,6 +132,66 @@
     "plt.plot(df['timestamp'],df['counts_1'])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f3d9017e-73bc-4a10-a473-d65081d2a55e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "DATA_PATH = os.path.join(\"../src/crnpy/global_neutron_detectors.csv\")\n",
+    "Z = pd.read_csv(DATA_PATH, skiprows=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6b20e220-a779-49e6-834d-49a0b12a9d4a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "json_str = json.dumps(Z.values.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a24fead7-fbb8-4fba-b7db-2737249fb41c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[[\"AATA\", \"Alma-Ata A\", 5.9, 897], [\"AATB\", \"Alma-Ata B\", 5.9, 3340], [\"AHMD\", \"Ahmedabad\", 15.94, 50], [\"APTY\", \"Apatity\", 0.65, 181], [\"ARNM\", \"Aragats\", 7.1, 3200], [\"ATHN\", \"Athens\", 8.53, 260], [\"BKSN\", \"Baksan\", 5.7, 1700], [\"CALG\", \"Calgary\", 1.08, 1123], [\"CALM\", \"NM de Castilla la Mancha\", 6.95, 708], [\"CLMX\", \"Climax\", 3.0, 3400], [\"DJON\", \"Daejeon\", 11.2, 200], [\"DOMB\", \"Dome C mini NM (bare)\", 0.01, 3233], [\"DOMC\", \"Dome C mini NM\", 0.01, 3233], [\"DRBS\", \"Dourbes\", 3.18, 225], [\"ESOI\", \"Emilio Segre Obs. Israel\", 10.75, 2055], [\"FSMT\", \"Forth Smith\", 0.3, 180], [\"HRMS\", \"Hermanus\", 4.58, 26], [\"HUAN\", \"Huancayo\", 12.92, 3400], [\"INVK\", \"Inuvik\", 0.3, 21], [\"IRK2\", \"Irkustk 2\", 3.64, 2000], [\"IRK3\", \"Irkustk 3\", 3.64, 3000], [\"IRKT\", \"Irkustk\", 3.64, 435], [\"JBGO\", \"JangBogo\", 0.3, 29], [\"JUNG\", \"IGY Jungfraujoch\", 4.49, 3570], [\"JUNG1\", \"NM64 Jungfraujoch\", 4.49, 3475], [\"KERG\", \"Kerguelen\", 1.14, 33], [\"KGSN\", \"Kingston\", 1.88, 65], [\"KIEL\", \"Kiel\", 2.36, 54], [\"KIEL2\", \"KielRT\", 2.36, 54], [\"LMKS\", \"Lomnicky Stit\", 3.84, 2634], [\"MCMU\", \"Mc Murdo\", 0.3, 48], [\"MCRL\", \"Mobile Cosmic Ray Laboratory\", 2.46, 200], [\"MGDN\", \"Magadan\", 2.1, 220], [\"MOSC\", \"Moscow\", 2.43, 200], [\"MRNY\", \"Mirny\", 0.03, 30], [\"MWSN\", \"Mawson\", 0.22, 30], [\"MXCO\", \"Mexico\", 8.28, 2274], [\"NAIN\", \"Nain\", 0.3, 46], [\"NANM\", \"Nor-Amberd\", 7.1, 2000], [\"NEU3\", \"Neumayer III mini neutron monitor\", 0.1, 40], [\"NEWK\", \"Newark\", 2.4, 50], [\"NRLK\", \"Norilsk\", 0.63, 0], [\"NVBK\", \"Novosibirsk\", 2.91, 163], [\"OULU\", \"Oulu\", 0.81, 15], [\"PSNM\", \"Doi Inthanon (Princess Sirindhorn NM)\", 16.8, 2565], [\"PTFM\", \"Potchefstroom\", 6.98, 1351], [\"PWNK\", \"Peawanuck\", 0.3, 53], [\"ROME\", \"Rome\", 6.27, 0], [\"SANB\", \"Sanae D\", 0.73, 52], [\"SNAE\", \"Sanae IV\", 0.73, 856], [\"SOPB\", \"South Pole Bare\", 0.1, 2820], [\"SOPO\", \"South Pole\", 0.1, 2820], [\"TERA\", \"Terre Adelie\", 0.01, 32], [\"THUL\", \"Thule\", 0.3, 26], [\"TSMB\", \"Tsumeb\", 9.15, 1240], [\"TXBY\", \"Tixie Bay\", 0.48, 0], [\"UFSZ\", \"Zugspitze\", 4.1, 2650], [\"YKTK\", \"Yakutsk\", 1.65, 105], [\"ZUGS\", \"Zugspitze\", 4.24, 2960]]'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba4f4b92-db0a-445e-85cf-f99a42f51f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -150,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
