--- a/docs/examples/stationary/example_RDT_station.ipynb
+++ b/docs/examples/stationary/example_RDT_station.ipynb
@@ -327,7 +327,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "In this step, crnpy finds similar stations based on cutoff rigidity, which is estimated using latitude and longitude values. The 'find_neutron_detectors' function helps identify stations under a similar earth electromagnetic field. Then, download the data for one of the similar stations using 'get_incoming_neutron_flux' and add it to the DataFrame. Note that the station is hardcoded in the second line (`station=\"IRKT\"`) being required that the user manually define this after considering the potential options suggested."
+    "In this step, crnpy finds similar stations based on cutoff rigidity, which is estimated using latitude and longitude values. The 'find_neutron_detectors' function helps identify stations under a similar earth electromagnetic field. Then, download the data for one of the similar stations using 'get_incoming_neutron_flux' and add it to the DataFrame. Note that the station is hardcoded in the second line (`station=\"IRKT\"`) being required that the user manually define this after considering the potential options suggested. If optional parameters `start_date` and `end_date` are supplied, the `find_neutron_detectors()` method will filter out stations without data for the period of interest."
    ]
   },
   {
@@ -344,27 +344,21 @@
       "Select a station with an altitude similar to that of your location. For more information go to: 'https://www.nmdb.eu/nest/help.php#helpstations\n",
       "\n",
       "Your cutoff rigidity is 2.87 GV\n",
-      "     STID                          NAME     R  Altitude_m\n",
-      "42   NVBK                   Novosibirsk  2.91         163\n",
-      "9    CLMX                        Climax  3.00        3400\n",
-      "13   DRBS                       Dourbes  3.18         225\n",
-      "31   MCRL  Mobile Cosmic Ray Laboratory  2.46         200\n",
-      "33   MOSC                        Moscow  2.43         200\n",
-      "40   NEWK                        Newark  2.40          50\n",
-      "28  KIEL2                        KielRT  2.36          54\n",
-      "27   KIEL                          Kiel  2.36          54\n",
-      "32   MGDN                       Magadan  2.10         220\n",
-      "21   IRKT                       Irkustk  3.64         435\n"
+      "     STID     NAME     R  Altitude_m  Period available\n",
+      "13   DRBS  Dourbes  3.18         225              True\n",
+      "40   NEWK   Newark  2.40          50              True\n",
+      "28  KIEL2   KielRT  2.36          54              True\n",
+      "21   IRKT  Irkustk  3.64         435              True\n"
      ]
     }
    ],
    "source": [
     "#Find stations with cutoff rigidity similar to estimated by lat,lon\n",
-    "crnpy.find_neutron_detectors(crnpy.cutoff_rigidity(39.1, -96.6))\n",
+    "crnpy.find_neutron_detectors(crnpy.cutoff_rigidity(39.1, -96.6), start_date=df['timestamp'][0], end_date= df['timestamp'][-1])\n",
     "\n",
     "#Download data for one of the similar stations and add to df\n",
     "incoming_neutrons = crnpy.get_incoming_neutron_flux(df['timestamp'][0], df['timestamp'][-1], station=\"IRKT\", utc_offset=-5)\n",
-    "df['incoming_flux']=crnpy.interpolate_incoming_flux(incoming_neutrons, timestamps=df['timestamp']).values"
+    "df['incoming_flux']=crnpy.interpolate_incoming_flux(incoming_neutrons, timestamps=df['timestamp'])"
    ]
   },
   {
@@ -491,6 +485,14 @@
     "df['VWC']=crnpy.counts_to_vwc(df_filtered, N0=N0_rdt, bulk_density=1.3, Wlat=0.03, Wsoc=0.01)\n",
     "df['VWC'].plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f62f873-6e5c-4b07-ab94-77695378aee8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -509,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
