corrections in examples

--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -853,7 +853,7 @@
    "source": [
     "## Solving the equation\n",
     "\n",
-    "Previous steps estimated the a field volumetric water content of `0.256` and an average neutron count of `1720`. The function [scipy.optimize.curve_fit()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.curve_fit.html) estiamtes the $N_0$ parameter using least squares method."
+    "Previous steps estimated the a field volumetric water content of `0.256` and an average neutron count of `1720`. The function [scipy.optimize.root()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html) estiamtes the $N_0$ given the observed value of $\\theta_v$ and neutron count."
    ]
   },
   {
@@ -866,32 +866,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2636.69127046]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jperaza\\AppData\\Local\\anaconda3\\envs\\crnpy\\lib\\site-packages\\scipy\\optimize\\_minpack_py.py:906: OptimizeWarning: Covariance of the parameters could not be estimated\n",
-      "  warnings.warn('Covariance of the parameters could not be estimated',\n"
+      "The solved value for N0 is: [2636.69127046]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.optimize import curve_fit\n",
+    "from scipy.optimize import root\n",
     "\n",
-    "def crnpy_desilets_model(counts, N0):\n",
-    "    return crnpy.counts_to_vwc(counts, N0, bulk_density=field_bulk_density, Wlat=0.03, Wsoc=0.01)\n",
+    "# Define the function for which we want to find the roots\n",
+    "def func(N0):\n",
+    "    return crnpy.counts_to_vwc(df['corrected'].mean(), N0, bulk_density=field_bulk_density, Wlat=0.03, Wsoc=0.01) - field_theta_v\n",
     "\n",
-    "# Generate some synthetic data\n",
-    "x = df['corrected'].mean()\n",
-    "y = field_theta_v\n",
-    "# Perform curve fitting\n",
-    "popt, pcov = curve_fit(crnpy_desilets_model, [x], [y])\n",
-    "print(popt)"
+    "# Make an initial guess for N0\n",
+    "N0_initial_guess = 1000\n",
+    "\n",
+    "# Find the root\n",
+    "sol = root(func, N0_initial_guess)\n",
+    "\n",
+    "# Print the solution\n",
+    "print(f\"The solved value for N0 is: {sol.x}\")"
    ]
   },
   {
