Removed over explained steps

--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "### Soil sampling layout\n",
     "\n",
-    "The soil sampling layout is a critical component of the calibration process. It consists of three concentric layers of sampling points from the station location. This strategic arrangement ensures a comprehensive coverage of the area around the station.\n",
+    "The soil sampling layout is a critical component of the calibration process. This strategic arrangement ensures a comprehensive coverage of the area around the station.\n",
     "\n",
     "<img src=\"../../../img/layout.png\" style=\"max-width:500px\">\n",
     "\n",
@@ -28,7 +28,7 @@
     "- **50 m:** This intermediate layer consists of four sampling points positioned at a distance of 50 meters from the central station. These points provide a broader perspective of the soil moisture content in the area.\n",
     "- **100 m:** The outermost layer, situated at a distance of 100 meters from the central station, consists of four sampling points. This layer provides soil data from the furthest distance from the station within the sampling layout, offering a wider context of the soil moisture content in the area.\n",
     "\n",
-    "Each soil sample is then split into four depth segments: 0-5 cm, 5-10 cm, 10-25 cm, and 25-40 cm. This depth segmentation allows for a more detailed analysis of the soil moisture content at different soil depths, providing a more nuanced understanding of the soil's moisture profile.\n",
+    "Each soil sample is then split into four depth segments: 0-5 cm, 5-10 cm, 10-25 cm, and 25-40 cm. This depth segmentation allows for a more detailed analysis of the soil moisture content at different soil depths.\n",
     "\n",
     "<img src=\"../../../img/core.png\" style=\"max-height:500px\">\n",
     "\n",
@@ -271,7 +271,7 @@
    "source": [
     "### Sample processing\n",
     "\n",
-    "The samples should be weighed as promptly as possible, either in the field or in the laboratory, to ensure accuracy and reliability of data. In the provided template the colums `wet_mass_with_bag\tmass_empty_bag,mass_empty_can,wet_mass_with_can,` should be filled. After drying the samples at 105 °C degrees until constant weight is reached the column `dry_mass_with_can` needs to be filled.\n",
+    "The colums `wet_mass_with_bag\tmass_empty_bag,mass_empty_can,wet_mass_with_can,` should be filled. After drying the samples at 105 °C degrees until constant weight is reached the column `dry_mass_with_can` needs to be filled.\n",
     "\n",
     "At this point all the other columns can be filled with the calcualtions for obtaining gravimetric water content ($\\theta_g$), bulk density ($\\rho_\\beta$) and the volumetric water content ($\\theta_v$). See the details of this calculation on the [filled example](https://github.com/soilwater/crnpy/blob/main/docs/examples/calibration/soil_data.xlsx). \n",
     "\n",
@@ -838,12 +838,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean corrected neutron count during sampling: 1539.8181818181818\n"
+      "Mean corrected neutron count during sampling: 1540.0\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Mean corrected neutron count during sampling: {df['corrected'].mean()}\")"
+    "print(f\"Mean corrected neutron count during sampling: {df['corrected'].mean().round()}\")"
    ]
   },
   {
@@ -851,9 +851,9 @@
    "id": "a6afe1e9-5d72-4dbb-a5f9-edc53a928cc4",
    "metadata": {},
    "source": [
-    "## Solving the equation\n",
+    "## Solving the equation for $N_0$\n",
     "\n",
-    "Previous steps estimated the a field volumetric water content of `0.256` and an average neutron count of `1720`. The function [scipy.optimize.root()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html) estiamtes the $N_0$ given the observed value of $\\theta_v$ and neutron count."
+    "Previous steps estimated the a field volumetric water content of `0.256` and an average neutron count of `1540`. The function [scipy.optimize.root()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html) estiamtes the $N_0$ given the observed value of $\\theta_v$ and neutron count."
    ]
   },
   {
@@ -866,7 +866,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The solved value for N0 is: [2636.69127046]\n"
+      "The solved value for N0 is: [2637.]\n"
      ]
     }
    ],
@@ -884,7 +884,7 @@
     "sol = root(func, N0_initial_guess)\n",
     "\n",
     "# Print the solution\n",
-    "print(f\"The solved value for N0 is: {sol.x}\")"
+    "print(f\"The solved value for N0 is: {sol.x.round()}\")"
    ]
   },
   {
@@ -893,6 +893,8 @@
    "metadata": {},
    "source": [
     "## References: \n",
+    "Desilets, D., Zreda, M., & Ferré, T. P. (2010). Nature's neutron probe: Land surface hydrology at an elusive scale with cosmic rays. Water Resources Research, 46(11).\n",
+    "\n",
     "Dong, J., & Ochsner, T. E. (2018). Soil texture often exerts a stronger influence than precipitation on mesoscale soil moisture patterns. Water Resources Research, 54(3), 2199-2211.\n",
     "\n",
     "Patrignani, A., Ochsner, T. E., Montag, B., & Bellinger, S. (2021). A novel lithium foil cosmic-ray neutron detector for measuring field-scale soil moisture. Frontiers in Water, 3, 673185."
