--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -17,251 +17,18 @@
     "\n",
     "### Soil sampling layout\n",
     "\n",
-    "The soil sampling layout is a critical component of the calibration process. This strategic arrangement ensures a comprehensive coverage of the area around the station.\n",
+    "14 cores were collected from different distances. In this example each soil sample was splitted into four depth segments: 0-5 cm, 5-10 cm, 10-25 cm, and 25-40 cm. Soil samples were processed and soil mositure was determined using the thermo-gravimetric method.\n",
     "\n",
     "<img src=\"../../../img/layout.png\" style=\"max-width:500px\">\n",
+    "<img src=\"../../../img/core.png\" style=\"padding:50px;max-height:500px \">\n",
     "\n",
-    "Figure 1. Proposed layout for doing CRNP device field calibrations.\n",
-    "\n",
-    "\n",
-    "- **5 m:** At this closest proximity to the station, six sampling points are located equidistantly around the station. These points provide local soil data that is most immediately influenced by the station.\n",
-    "- **50 m:** This intermediate layer consists of four sampling points positioned at a distance of 50 meters from the central station. These points provide a broader perspective of the soil moisture content in the area.\n",
-    "- **100 m:** The outermost layer, situated at a distance of 100 meters from the central station, consists of four sampling points. This layer provides soil data from the furthest distance from the station within the sampling layout, offering a wider context of the soil moisture content in the area.\n",
-    "\n",
-    "Each soil sample is then split into four depth segments: 0-5 cm, 5-10 cm, 10-25 cm, and 25-40 cm. This depth segmentation allows for a more detailed analysis of the soil moisture content at different soil depths.\n",
-    "\n",
-    "<img src=\"../../../img/core.png\" style=\"max-height:500px\">\n",
-    "\n",
-    "Figure 2. Proposed layout for spliting each of the soil cores by depth.\n",
+    "Figure 1. Horizontal layout and vertical layout used in this particular example calibration, it can be customized by the user depending on their needs.\n",
     "\n",
     "### Template for data collection\n",
     "\n",
-    "[Download the following template](https://github.com/soilwater/crnpy/blob/main/docs/examples/calibration/template.xlsx) spreadsheet for collecting soil samples data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f5484df5-26c7-46a7-9f57-821e76d8e18b",
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>field</th>\n",
-       "      <th>date</th>\n",
-       "      <th>core_number</th>\n",
-       "      <th>distance_from_station</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>top_depth</th>\n",
-       "      <th>bottom_depth</th>\n",
-       "      <th>core_diameter</th>\n",
-       "      <th>wet_mass_with_bag</th>\n",
-       "      <th>...</th>\n",
-       "      <th>can_number</th>\n",
-       "      <th>mass_empty_can</th>\n",
-       "      <th>wet_mass_with_can</th>\n",
-       "      <th>dry_mass_with_can</th>\n",
-       "      <th>mass_water</th>\n",
-       "      <th>theta_g</th>\n",
-       "      <th>volume</th>\n",
-       "      <th>bulk_density</th>\n",
-       "      <th>theta_v</th>\n",
-       "      <th>Observation</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>5</td>\n",
-       "      <td>10</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>10</td>\n",
-       "      <td>25</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>25</td>\n",
-       "      <td>40</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  field date  core_number  distance_from_station latitude longitude   \n",
-       "0                       1                      5                     \\\n",
-       "1                       1                      5                      \n",
-       "2                       1                      5                      \n",
-       "3                       1                      5                      \n",
-       "4                       2                      5                      \n",
-       "\n",
-       "   top_depth  bottom_depth core_diameter wet_mass_with_bag  ... can_number   \n",
-       "0          0             5                                  ...             \\\n",
-       "1          5            10                                  ...              \n",
-       "2         10            25                                  ...              \n",
-       "3         25            40                                  ...              \n",
-       "4          0             5                                  ...              \n",
-       "\n",
-       "  mass_empty_can wet_mass_with_can dry_mass_with_can mass_water theta_g   \n",
-       "0                                                                        \\\n",
-       "1                                                                         \n",
-       "2                                                                         \n",
-       "3                                                                         \n",
-       "4                                                                         \n",
-       "\n",
-       "  volume bulk_density theta_v Observation  \n",
-       "0                                          \n",
-       "1                                          \n",
-       "2                                          \n",
-       "3                                          \n",
-       "4                                          \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from crnpy import crnpy\n",
+    "[Download the following template](https://github.com/soilwater/crnpy/blob/main/docs/examples/calibration/template.xlsx) spreadsheet for collecting soil samples data:\n",
     "\n",
-    "pd.read_excel(\"template.xlsx\").replace(np.nan,'',regex=False).head()"
+    "<img src=\"../../../img/template.png\" style=\"max-width:500px\">\n"
    ]
   },
   {
@@ -271,13 +38,11 @@
    "source": [
     "### Sample processing\n",
     "\n",
-    "The colums `wet_mass_with_bag\tmass_empty_bag,mass_empty_can,wet_mass_with_can,` should be filled. After drying the samples at 105 °C degrees until constant weight is reached the column `dry_mass_with_can` needs to be filled.\n",
-    "\n",
-    "At this point all the other columns can be filled with the calcualtions for obtaining gravimetric water content ($\\theta_g$), bulk density ($\\rho_\\beta$) and the volumetric water content ($\\theta_v$). See the details of this calculation on the [filled example](https://github.com/soilwater/crnpy/blob/main/docs/examples/calibration/soil_data.xlsx). \n",
+    "For each sample is required to know the bulk density ($\\rho_\\beta$) and the volumetric water content ($\\theta_v$). See the details of the calculation used on the [filled example](https://github.com/soilwater/crnpy/blob/main/docs/examples/calibration/soil_data.csv). \n",
     "\n",
     "### Field average\n",
     "\n",
-    "Load the soil samples data using pandas, and using the function `nrad_weight()` the weights corresponding to each soil sample will be computed considering air-humidity, sample depth, distance from station and bulk density.\n",
+    "Load the soil samples data using pandas, and using the function [`nrad_weight()`](../../../reference/#crnpy.crnpy.nrad_weight) the weights corresponding to each soil sample will be computed considering air-humidity, sample depth, distance from station and bulk density.\n",
     "\n"
    ]
   },
