File cleaning and updated docs

--- a/docs/examples/rover/Hydroinnova_rover_example-Copy1.ipynb
+++ b/docs/examples/rover/Hydroinnova_rover_example-Copy1.ipynb
@@ -480,6 +480,56 @@
     "plt.scatter(df['x'], df['y'], marker='o', edgecolor='k', facecolor='w')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6b2286d7-45ca-4cba-b472-4037b66f7806",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z_pred.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e5e3f9ab-a5b6-4545-b83b-94192fb21ee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.158903165242229"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nanmean(Z_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32c94ed1-d9bd-4e71-abb7-f93f7bec553a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
