Feedback and changes

--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -1,11 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
    "id": "41b67b16-ade4-4021-a716-1e66960314ef",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "source": [
-    "# CRNP field calibration of N0 device-specific parameter.\n",
+    "# Device-specific field calibration\n",
     "\n",
     "## $N_0$ Parameter Calibration\n",
     "\n",
@@ -20,7 +24,6 @@
     "14 cores were collected from different distances. In this example each soil sample was split into four depth segments: 0-5 cm, 5-10 cm, 10-25 cm, and 25-40 cm. Soil samples were processed and soil moisture was determined using the thermo-gravimetric method.\n",
     "\n",
     "<img src=\"../../../img/layout.png\" style=\"max-width:500px\">\n",
-    "<img src=\"../../../img/core.png\" style=\"padding:50px;max-height:500px \">\n",
     "\n",
     "Figure 1. Horizontal layout and vertical layout used in this particular example calibration, it can be customized by the user depending on their needs.\n",
     "\n",
@@ -29,7 +32,30 @@
     "[Download the following template](https://github.com/soilwater/crnpy/blob/main/docs/examples/calibration/template.xlsx) spreadsheet for collecting soil samples data:\n",
     "\n",
     "<img src=\"../../../img/template.png\" style=\"max-width:500px\">\n"
-   ]
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Importing required libraries\n",
+    "from scipy.optimize import root\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from crnpy import crnpy\n",
+    "\n",
+    "# Import dataframes\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -259,10 +285,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from crnpy import crnpy\n",
-    "\n",
+    "# Import the example dataset\n",
     "df_soil = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/soil_data.csv\")\n",
     "df_soil.head()"
    ]
@@ -294,6 +317,10 @@
     "\n",
     "#  Parse dates\n",
     "df_station['TIMESTAMP'] = pd.to_datetime(df_station['TIMESTAMP'])\n",
+    "\n",
+    "# Define station deployment data\n",
+    "throw Excpetion()\n",
+    "# Define samplinf_start_Date and sampling end date\n",
     "\n",
     "# Filter data matching the sampling date\n",
     "df_station_calib = df_station[(df_station['TIMESTAMP'] > pd.to_datetime(\"2021-10-22 08:00\")) & (df_station['TIMESTAMP'] < pd.to_datetime(\"2021-10-22 16:00\"))].copy()\n",
@@ -680,8 +707,8 @@
     "# Fill NaN values in atmospheric data\n",
     "df[['pressure', 'RH', 'T']] = crnpy.fill_missing_atm(df[['barometric_pressure_Avg', 'relative_humidity_Avg', 'air_temperature_Avg']])\n",
     "# Correct count by atmospheric variables and incoming flux\n",
-    "df['total_counts']=crnpy.fill_counts(df['total_counts'])\n",
-    "df['corrected']=crnpy.atm_correction(df['total_counts'], pressure=df['pressure'], humidity=df['RH'], temp=df['T'], Pref=976, Aref=0, L=130, incoming_neutrons=df['incoming_flux'], incoming_Ref = ref_incoming_flux).dropna()"
+    "df['total_counts'] = crnpy.fill_counts(df['total_counts'])\n",
+    "df['corrected'] = crnpy.atm_correction(df['total_counts'], pressure=df['pressure'], humidity=df['RH'], temp=df['T'], Pref=976, Aref=0, L=130, incoming_neutrons = df['incoming_flux'], incoming_Ref = ref_incoming_flux).dropna()"
    ]
   },
   {
@@ -727,8 +754,6 @@
     }
    ],
    "source": [
-    "from scipy.optimize import root\n",
-    "\n",
     "# Define the function for which we want to find the roots\n",
     "def func(N0):\n",
     "    return crnpy.counts_to_vwc(df['corrected'].mean(), N0, bulk_density=field_bulk_density, Wlat=0.03, Wsoc=0.01) - field_theta_v\n",
