--- a/docs/examples/rover/Hydroinnova_rover_example.ipynb
+++ b/docs/examples/rover/Hydroinnova_rover_example.ipynb
@@ -5,7 +5,7 @@
    "id": "bbc0a6eb-7b4f-4992-87a2-51766af67400",
    "metadata": {},
    "source": [
-    "# Processing and Analyzing Hydroinnova Rover Data with CRNPy\n",
+    "# Processing and analyzing data from a roving detector\n",
     "\n",
     "\n",
     "\n",
@@ -382,7 +382,7 @@
    "outputs": [],
    "source": [
     "# Smooth variable\n",
-    "df['corrected_smoothed'] = crnpy.smooth_2D(df['x'],\n",
+    "df['corrected_smoothed'] = crnpy.smooth_2d(df['x'],\n",
     "                                        df['y'],\n",
     "                                        df['corrected_counts'],\n",
     "                                        buffer= 800, method='median', rnd=True)\n",
@@ -394,7 +394,7 @@
     "df = df.dropna(subset=['VWC'])\n",
     "\n",
     "# Interpolate variable\n",
-    "X_pred, Y_pred, Z_pred = crnpy.interpolate_2D(df['x'],\n",
+    "X_pred, Y_pred, Z_pred = crnpy.interpolate_2d(df['x'],\n",
     "                                        df['y'],\n",
     "                                        df['VWC'],\n",
     "                                        dx=250, dy=250, method='cubic')\n",
