--- a/docs/examples/stationary/example_RDT_station.ipynb
+++ b/docs/examples/stationary/example_RDT_station.ipynb
@@ -5,7 +5,7 @@
    "id": "eddf1ad2",
    "metadata": {},
    "source": [
-    "# Processing and Analyzing RDT stationary detector observations with CRNPy\n",
+    "# Processing and analyzing data from a stationary detector\n",
     "\n",
     "This tutorial, demonstrates how to process and analyze neutron detection data from 3 Radiation Detection Technologies, Inc (RDT) neutron detectors using the Cosmic Ray Neutron Python (CRNPy) library. The tutorial covers steps including data loading, count data processing, normalization, outlier removal, atmospheric correction, and conversion of neutron counts to Volumetric Water Content (VWC). \n",
     "\n",
@@ -397,7 +397,7 @@
    "id": "bb8f0bec-723b-42db-ae11-46c7dab6cf08",
    "metadata": {},
    "source": [
-    "Smooth the corrected data using the Savitzky-Golay filter with the [`smooth_1D()`](../../../reference/#crnpy.crnpy.smooth_1D) function."
+    "Smooth the corrected data using the Savitzky-Golay filter with the [`smooth_1d()`](../../../reference/#crnpy.crnpy.smooth_1d) function."
    ]
   },
   {
@@ -429,7 +429,7 @@
    ],
    "source": [
     "# Filter using the Savitzky-Golay filter\n",
-    "df_filtered = crnpy.smooth_1D(df['corrected'].dropna(), window=11, order=3, method=\"savitzky_golay\")\n",
+    "df_filtered = crnpy.smooth_1d(df['corrected'].dropna(), window=11, order=3, method=\"savitzky_golay\")\n",
     "\n",
     "df_filtered.plot()"
    ]
